# x1000

./: .gitignore  CMakeLists.txt  README.md  notes.txt  package.sh  shell.html
assets/: .notempty
include/: clickables.h  draw_hex_tiles.h  game.h  game_error.h  game_render_texture.h  get_mouse_pos_rel.h  hexagons.h  move_hexagons.h
include/ray_wrap/: draw_arrow.h  draw_hexagon.h  draw_text_centred.h  rectangle_centre.h  rectangle_shrink.h
patches/: config.h
src/: clickables.c  draw_hex_tiles.c  game.c  game_error.c  game_render_texture.c  get_mouse_pos_rel.c  hexagons.c  main.c  move_hexagons.c
src/ray_wrap/: drawArrow.c  draw_hexagon.c  draw_text_centred.c  rectangle_centre.c  rectangle_shrink.c
